# dense-ground-truth-generator

./: CMakeLists.txt  README.md  package.xml
config/: ground_truth_params.yaml
dense_ground_truth/: CMakeLists.txt  package.xml  requirements.txt
dense_ground_truth/config/: ground_truth_params.yaml
dense_ground_truth/dense_ground_truth/: ground_truth_server.cpp
dense_ground_truth/launch/: gpr_demo.launch.py  ground_truth_server.launch.py  rbf_demo.launch.py
dense_ground_truth/scripts/: gpr_visualization.py  rbf_visualization.py
dense_ground_truth/srv/: SampleGroundTruth.srv
dense_ground_truth_generator/: ground_truth_server.cpp
launch/: ground_truth_server.launch.py  rbf_demo.launch.py  server_with_spatial_publisher.launch.py
scripts/: rbf_visualization.py  spatial_measurement_publisher.py
